[gd_scene load_steps=22 format=3 uid="uid://dnfu52ejctfq4"]

[ext_resource type="Script" path="res://gui/end_screen/win/win_screen.gd" id="1_3t4h3"]
[ext_resource type="Texture2D" uid="uid://76o38yy42vn7" path="res://gui/end_screen/win/win_bg.png" id="2_rpi2w"]
[ext_resource type="Texture2D" uid="uid://c5ba825vgr4w7" path="res://gui/end_screen/win/win_title_top.png" id="3_y5phr"]
[ext_resource type="Texture2D" uid="uid://elump6nutnin" path="res://gui/end_screen/win/win_title_bottom.png" id="4_gxyqw"]
[ext_resource type="Texture2D" uid="uid://da15hyohaajio" path="res://gui/end_screen/win/win_fly.tres" id="5_vprr0"]
[ext_resource type="Texture2D" uid="uid://c30u8mnrxksy" path="res://gui/end_screen/win/win_trophy_1.png" id="6_ke1du"]
[ext_resource type="Texture2D" uid="uid://cmaymuuwcm5ob" path="res://gui/end_screen/win/win_trophy_2.png" id="7_jwx00"]
[ext_resource type="Texture2D" uid="uid://ccdbpju6rw4ho" path="res://gui/end_screen/win/win_trophy_3.png" id="8_4jv72"]
[ext_resource type="Texture2D" uid="uid://ciouugeqpq0yh" path="res://gui/end_screen/win/win_trophy_4.png" id="9_lmqor"]
[ext_resource type="AudioStream" uid="uid://caeffrgfy6muy" path="res://gui/end_screen/win/win_music.ogg" id="10_5j6f2"]
[ext_resource type="Texture2D" uid="uid://nmw5spcggjku" path="res://gui/end_screen/lose/game_over_text_restart.png" id="10_nae6o"]
[ext_resource type="AudioStream" uid="uid://dqeac60k1ac6x" path="res://gui/end_screen/win/win_fanfare_audio/powerUp-01.ogg" id="11_3nhq2"]
[ext_resource type="AudioStream" uid="uid://blpuy8bn35ui2" path="res://gui/end_screen/win/win_fanfare_audio/powerUp-02.ogg" id="12_j2tpn"]
[ext_resource type="AudioStream" uid="uid://din4vnfdvvwhb" path="res://gui/end_screen/win/win_fanfare_audio/powerUp-03.ogg" id="13_prnth"]
[ext_resource type="AudioStream" uid="uid://hchj56miih6q" path="res://gui/end_screen/win/win_fanfare_audio/powerUp-04.ogg" id="14_uc075"]
[ext_resource type="AudioStream" uid="uid://bcls58ibgkmhr" path="res://gui/end_screen/win/win_fanfare_audio/powerUp-05.ogg" id="15_3nd1f"]
[ext_resource type="AudioStream" uid="uid://bil7ebhvbm0uy" path="res://gui/end_screen/win/win_fanfare_audio/powerUp-06.ogg" id="16_0no2l"]
[ext_resource type="AudioStream" uid="uid://cnwde57647g3g" path="res://gui/end_screen/win/win_fanfare_audio/powerUp-07.ogg" id="17_36gd1"]
[ext_resource type="AudioStream" uid="uid://ci3ca1epxot1u" path="res://gui/end_screen/win/win_fanfare_audio/powerUp-08.ogg" id="18_bwk7r"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_1xdyh"]
frames = 4
speed_scale = 10.0
frame_0/texture = ExtResource("6_ke1du")
frame_1/texture = ExtResource("7_jwx00")
frame_1/duration = 1.0
frame_2/texture = ExtResource("8_4jv72")
frame_2/duration = 1.0
frame_3/texture = ExtResource("9_lmqor")
frame_3/duration = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qixql"]
streams_count = 8
stream_0/stream = ExtResource("11_3nhq2")
stream_0/weight = 1.0
stream_1/stream = ExtResource("12_j2tpn")
stream_1/weight = 1.0
stream_2/stream = ExtResource("13_prnth")
stream_2/weight = 1.0
stream_3/stream = ExtResource("14_uc075")
stream_3/weight = 1.0
stream_4/stream = ExtResource("15_3nd1f")
stream_4/weight = 1.0
stream_5/stream = ExtResource("16_0no2l")
stream_5/weight = 1.0
stream_6/stream = ExtResource("17_36gd1")
stream_6/weight = 1.0
stream_7/stream = ExtResource("18_bwk7r")
stream_7/weight = 1.0

[node name="WinScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3t4h3")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rpi2w")

[node name="TitleTop" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_y5phr")

[node name="TitleBottom" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gxyqw")

[node name="Fly" type="TextureRect" parent="."]
custom_minimum_size = Vector2(153, 78)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -61.0
offset_right = -117.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_vprr0")

[node name="Trophy" type="TextureRect" parent="."]
custom_minimum_size = Vector2(180, 216)
layout_mode = 0
offset_left = 913.0
offset_top = -10.0
offset_right = 1093.0
offset_bottom = 206.0
texture = SubResource("AnimatedTexture_1xdyh")

[node name="WinMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_5j6f2")
autoplay = true

[node name="WinSoundEffect" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_qixql")
autoplay = true
bus = &"SFX"

[node name="RestartInfo" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_nae6o")
